
                                     Andre Deperrois


*******************************************************************************


xflr5 v6.10.02 March xxxth, 2014
	- Added an option to scale the wing's area and aspect ratio
	- Fixed a potential crash bug in Graph scales drawing when no project is loaded
	- Improved the support for OpenGL on Windows platforms
	- Modified the calculation of the foil mid line and wing mid surface - reduces issues with foils with coarse panelling at leading edge
	- Added and option to display panel normals and vortices - meant to help check if foil panelling is fine enough
	- Added an option to set manually the reference dimensions for the calculation of aerodynamic coefficients of planes
	- Fixed the issue with the storage of modified foils in inverse design
	- Fixed the issue of ineffective a.o.a. increment in Batch Foil Analysis
	- Fixed the bug which caused the flap moment not to be reset at each plane calculation
	- Other minor cosmetic changes


xflr5 v6.10.01 February 1st, 2014
	- Created a new binary .xfl projet file format. Replaces once and for all the awful .wpa format
	- Removed the option for independent wing analysis
	- Introducing type 5 polars for the analysis of variable sideslip
	- Disabled the horseshoe vortex method for stability polars, for beta-polars, and whenever sidelip is defined.
	- Aligned  theviscous drag vector with freestream velocity rather than with x-axis - slight impact on viscous results
	- Enabled LLT analysis for all Plane objects
	- Removed the option for symmetry in 3d analysis
	- Corrected the bug in type 4 plane analysis- elevator and fin coefficients were incorrectly calculated
	- Removed the default sizing for panel and matrix arrays. The arrays are now allocated for the size of the largest model loaded in the session.
	- Corrected some memory leaks
	- Corrected memory allocation/release mismatches
	- MASSIVE code cleaning.